k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shopsmart
  labels:
    app: shopsmart
    environment: production
